<resources>
    <string name="app_name">Know it all ?</string>
    <string name="start_the_quiz">Start the Quiz</string>
    <string name="check_it_out">Let\'s Check it out !!!</string>
    <string name="know_it_all">KNOW IT ALL ?</string>
    <string name="quiz_icon">Quiz Icon</string>
    <string name="go_back_to_home">Go Back To Home</string>
    <string name="logo">Logo</string>
    <string name="next_question">Next Question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="what_is_a_question">What is a Question ?</string>
    <string name="score_">33/40</string>
    <string name="your_score_is">Your Score is :</string>
    <string name="congratulations">Congratulations !!!</string>
    <string name="splash_screen">splash screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_of_luck">Best of Luck 👍</string>
    <string name="_2_the_game_consists_of_10_questions_and_each_question_has_4_options_of_which_only_1_is_correct">2. The game consists of 10 questions and each question has 4 options, of which only 1 is correct.</string>
    <string name="_1_the_game_is_to_be_played_by_a_single_player_only">1. The game is to be played by a single player only.</string>
    <string name="exit">Exit</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="_3_you_can_t_go_back_to_previous_question_so_mark_answers_carefully">3. You can\'t go back to previous question, so mark answers carefully !!!</string>
    <string name="rules">RULES</string>
    <string name="time">Time</string>
    <string name="time_up">Time Up !!!</string>
    <string name="_4_you_only_have_30_seconds_for_each_question_so_be_quick">4. You only have 30 seconds for each question, so be quick !</string>
</resources>